# macromath-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: macromath.yml
src/: lib.rs
