[package]
authors = [ "Fabian Möller <fabianm88@gmail.com>" ]
categories = [ "mathematics" ]
description = "Macros for convenient maths with checked, wrapping or saturating semantics"
edition = "2021"
keywords = [ "math", "macro","utility" ]
license = "MIT OR Apache-2.0"
name = "macromath"
readme = "README.md"
repository = "https://github.com/B4dM4n/macromath"
version = "0.1.0-alpha.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.33"
quote = "1.0.10"
syn = { version = "1.0.82", features = [ "fold", "full" ] }
